// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons/Actions Component Output with ArgsTypes 1`] = `
<ng-component>
  <storybook-button-component
    _nghost-a-c4=""
    ng-reflect-text="Button 🥁"
  >
    <button
      _ngcontent-a-c4=""
    >
      Button 🥁
    </button>
  </storybook-button-component>
</ng-component>
`;

exports[`Storyshots Addons/Actions Component Output with EventEmitter 1`] = `
<ng-component>
  <storybook-button-component
    _nghost-a-c2=""
    ng-reflect-text="Button 🥁"
  >
    <button
      _ngcontent-a-c2=""
    >
      Button 🥁
    </button>
  </storybook-button-component>
</ng-component>
`;

exports[`Storyshots Addons/Actions Story with template 1`] = `
<ng-component>
  <button>
    Button
  </button>
</ng-component>
`;

exports[`Storyshots Addons/Actions Use action in method 1`] = `
<ng-component>
  <storybook-button-component
    _nghost-a-c3=""
    ng-reflect-text="Button 🥁"
  >
    <button
      _ngcontent-a-c3=""
    >
      Button 🥁
    </button>
  </storybook-button-component>
</ng-component>
`;
